--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   carousel_slider: ^4.2.1
   curved_navigation_bar: ^1.0.3
+  local_auth: ^2.2.0
 
 dev_dependencies:
   flutter_test:
