--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_phone_direct_caller: ^2.1.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.5
 
 
 dev_dependencies:
