--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
+  cupertino_icons: ^1.0.8
   flutter_screenutil: ^5.9.0
   carousel_slider: ^4.2.1
   curved_navigation_bar: ^1.0.3
@@ -45,6 +45,7 @@ dependencies:
   bloc: ^8.1.4
   flutter_bloc: ^8.1.5
   firebase_core: ^2.30.0
+  pinput: ^4.0.0
 
 dev_dependencies:
   hive_generator:
