--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,8 +51,18 @@ dependencies:
   cloud_firestore: ^4.17.4
   firebase_app_check: ^0.2.2+6
   firebase_messaging: ^14.9.3
+  geolocator: ^12.0.0
+  flutter_polyline_points: ^2.0.0
+  uuid: ^4.4.0
+  dio: ^5.4.3+1
+  material_floating_search_bar_2: ^0.5.0
+  meta: ^1.12.0
+  url_launcher: ^6.3.0
+  google_maps_flutter: ^2.7.0
   pinput: ^4.0.0
   modal_progress_hud_nsn: ^0.5.1
+  smooth_page_indicator: ^1.1.0
+  get: ^4.6.6
 
 dev_dependencies:
   hive_generator:
