--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,11 +55,13 @@ dependencies:
   flutter_polyline_points: ^2.0.0
   uuid: ^4.4.0
   dio: ^5.4.3+1
+  mailer: ^5.0.0
   material_floating_search_bar_2: ^0.5.0
-  meta: ^1.12.0
+  meta: ^1.11.0
   url_launcher: ^6.3.0
-  google_maps_flutter: ^2.7.0
+  google_maps_flutter: ^2.6.1
   pinput: ^4.0.0
+  email_auth: ^1.1.0
   modal_progress_hud_nsn: ^0.5.1
   smooth_page_indicator: ^1.1.0
   get: ^4.6.6
