--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,4 +69,6 @@ flutter {
 
 dependencies {
     implementation platform ('com.google.firebase:firebase-bom:30.3.2')
+    implementation 'com.google.firebase:firebase-appcheck:16.0.0'
+    implementation 'com.google.firebase:firebase-appcheck-playintegrity:16.0.0'
 }
