--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,11 +47,15 @@ dependencies:
   firebase_core: ^2.30.1
   firebase_auth: ^4.19.6
   firebase_storage: ^11.7.6
+  intl: ^0.17.0
+  #shared_preferences: ^2.0.6
   image_picker: ^1.1.1
   cloud_firestore: ^4.17.4
   firebase_app_check: ^0.2.2+6
   firebase_messaging: ^14.9.3
+  flutter_local_notifications: ^17.1.2
   geolocator: ^12.0.0
+  workmanager: ^0.5.0
   flutter_polyline_points: ^2.0.0
   uuid: ^4.4.0
   dio: ^5.4.3+1
@@ -67,8 +71,8 @@ dependencies:
   get: ^4.6.6
 
 dev_dependencies:
-  hive_generator:
-  build_runner:
+  hive_generator: ^1.1.1
+  build_runner: ^2.1.2
   flutter_test:
     sdk: flutter
 
