--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,6 @@ dependencies:
   firebase_auth: ^4.19.6
   firebase_storage: ^11.7.6
   intl: ^0.17.0
-  #shared_preferences: ^2.0.6
   image_picker: ^1.1.1
   cloud_firestore: ^4.17.4
   firebase_app_check: ^0.2.2+6
@@ -69,6 +68,8 @@ dependencies:
   modal_progress_hud_nsn: ^0.5.1
   smooth_page_indicator: ^1.1.0
   get: ^4.6.6
+  shared_preferences: ^2.2.3
+
 
 dev_dependencies:
   hive_generator: ^1.1.1
