--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  flutter_screenutil: ^5.9.1
+  flutter_screenutil: ^5.9.3
   carousel_slider: ^4.2.1
   curved_navigation_bar: ^1.0.3
   local_auth: ^2.2.0
@@ -48,7 +48,8 @@ dependencies:
   firebase_auth: ^4.19.6
   firebase_storage: ^11.7.6
   intl: ^0.17.0
-  image_picker: ^1.1.1
+  image_picker: ^1.1.2
+#  image^_picker: 1.1.1
   cloud_firestore: ^4.17.4
   firebase_app_check: ^0.2.2+6
   firebase_messaging: ^14.9.3
